test/files/neg/t9527a.check
t9527a.scala:5: error: ambiguous implicit values:
 both method f in class C of type (x: Int)String
 and method g in class C of type (x: Int)String
 match expected type Int => String
    implicitly[Int => String]
              ^
one error found
